--- a/xhprof_lib/templates/profTable.phtml
+++ b/xhprof_lib/templates/profTable.phtml
@@ -22,11 +22,11 @@
         <td><a href="?run=<?php echo $run1; ?>&amp;symbol=<?php echo urlencode($element['fn']); ?>"><?php echo htmlentities($element['fn'], ENT_QUOTES, 'UTF-8'); ?></a></td>
         <td><?php echo $element['ct']; ?></td>
         <td><?php echo $element['wt']; ?></td>
-        <td><?php echo $element['cpu']; ?></td>
+        <td><?php echo @$element['cpu']; ?></td>
         <td><?php echo $element['mu']; ?></td>
         <td><?php echo $element['pmu']; ?></td>
         <td><?php echo $element['excl_wt']; ?></td>
-        <td><?php echo $element['excl_cpu']; ?></td>
+        <td><?php echo @$element['excl_cpu']; ?></td>
         <td><?php echo $element['excl_mu']; ?></td>
         <td><?php echo $element['excl_pmu']; ?></td>
     </tr>
